appId: ${APP_ID}
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: false
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
      - tapOn:
          id: e2e-nav-actions
          optional: true
      - scrollUntilVisible:
          element:
            id: ${BUTTON_ID}
          direction: DOWN
          timeout: 10000
      - extendedWaitUntil:
          visible:
            id: ${BUTTON_ID}
          timeout: 10000
      - tapOn:
          id: ${BUTTON_ID}
          retryTapIfNoChange: true
          waitToSettleTimeoutMs: 500
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
