appId: ${APP_ID}
---
- launchApp:
    clearState: false
- runFlow:
    file: navigate-cohort-actions.yaml
    env:
      APP_ID: ${APP_ID}
- retry:
    maxRetries: 3
    commands:
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
      - extendedWaitUntil:
          visible:
            id: ${BUTTON_ID}
          timeout: 10000
      - tapOn:
          id: ${BUTTON_ID}
          retryTapIfNoChange: true
          waitToSettleTimeoutMs: 500
